2009-03-20	The InnoDB Team

	* include/log0log.h, include/log0log.ic, log/log0log.c:
	Add in/out comments or const qualifiers to some function
	parameters as appropriate.

2009-03-20	The InnoDB Team

	* dict/dict0boot.c, dict/dict0dict.c, fsp/fsp0fsp.c,
	include/dict0dict.h, include/srv0srv.h, srv/srv0srv.c,
	page/page0page.c:
	Replace srv_sys->dummy_ind1 and srv_sys->dummy_ind2 with
	dict_ind_redundant and dict_ind_compact, which are
	initialized by dict_init().

2009-03-05	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#43203 Overflow from auto incrementing causes server segv

2009-02-25	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#42714 AUTO_INCREMENT errors in 5.1.31

2009-02-23	The InnoDB Team

	* btr/btr0cur.c:
	Fix Bug#43043 Crash on BLOB delete operation

2009-02-20	The InnoDB Team

	* handler/ha_innodb.cc:
	Make innodb_use_sys_malloc=ON the default.

2009-02-20	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb-autoinc.result,
	mysql-test/innodb-autoinc.test:
	Fix Bug#42400 InnoDB autoinc code can't handle floating-point columns

2009-02-18	The InnoDB Team

	* include/ut0mem.h, os/os0proc.c, ut/ut0mem.c:
	Protect ut_total_allocated_memory with ut_list_mutex in
	os_mem_alloc_large() and os_mem_free_large(). The lack of this mutex
	protection could cause an assertion failure during fast index
	creation. Also, add UNIV_MEM_ALLOC and UNIV_MEM_FREE instrumentation
	to os_mem_alloc_large() and os_mem_free_large(), so that Valgrind can
	detect more errors.

2009-02-11	The InnoDB Team

	* handler/ha_innodb.cc:
	Make innodb_thread_concurrency=0 the default. The old default value
	was 8. A non-zero setting may be useful when InnoDB is showing severe
	scalability problems under multiple concurrent connections.

2009-02-10	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h: